--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "files.autoSave": "onFocusChange",
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "prettier.singleQuote": true,
+  "editor.wordWrap": "on"
 }
