change index added new project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
   "files.autoSave": "onFocusChange",
   "editor.tabSize": 2,
   "prettier.singleQuote": true,
-  "editor.wordWrap": "on"
+  "editor.wordWrap": "on",
+  "[sass]": {
+    "editor.defaultFormatter": "syler.sass-indented"
+  }
 }
